ChangeLog for django-globals
============================

0.2.1
-----

* A special code was added to send ReST version of readme to pypi.

0.2.0
-----

* The middleware now save the user AND the request.
* The `django_globals.middleware.User` middleware is replaced by the
  `django_globals.middleware.Global` (but it's kept for retrocompatibility with
  a decrecation warning)

0.1.0
-----

* First public release.